--- a/setup/setup_playbook_ubuntu.yml
+++ b/setup/setup_playbook_ubuntu.yml
@@ -3,8 +3,8 @@
   hosts: node
 
   vars:
-    user: amundra
-    user_home: "/home/{{ user }}"
+    user: root
+    user_home: "/root"
     app_root: "{{ user_home }}/expertiza"
     ruby_version: 3.2.1
 
@@ -37,8 +37,8 @@
         
     - name: Install Rbenv and Ruby-build
       ansible.builtin.shell: |
-        git clone https://github.com/rbenv/rbenv.git  "{{ user_home }}/.rbenv"
-        git clone https://github.com/rbenv/ruby-build.git  "{{ user_home }}/.rbenv/plugins/ruby-build"
+        git clone https://github.com/rbenv/rbenv.git  "/usr/rbenv"
+        git clone https://github.com/rbenv/ruby-build.git  "usr/rbenv/plugins/ruby-build"
         
     - name: Add Java and rbenv to PATH
       ansible.builtin.blockinfile:
@@ -46,14 +46,14 @@
         block: |
           export PATH=$PATH:/usr/jdk-11/bin
           export JAVA_HOME=/usr/jdk-11
-          export PATH="{{ user_home }}/.rbenv/bin:$PATH"
-          export PATH="$HOME/.rbenv/plugins/ruby-build/bin:$PATH"
+          export PATH=$PATH:/usr/rbenv/bin
+          export PATH=$PATH:/usr/rbenv/plugins/ruby-build/bin
           eval "$(rbenv init - bash)"
         
     - name: Install Ruby
       ansible.builtin.shell: |
-        "{{ user_home }}/.rbenv/bin/rbenv" install --verbose "{{ ruby_version }}"
-        "{{ user_home }}/.rbenv/bin/rbenv" global "{{ ruby_version }}"
+        "/usr/rbenv/bin/rbenv" install "{{ ruby_version }}"
+        "/usr/rbenv/bin/rbenv" global "{{ ruby_version }}"
       
     - name: Install MySQL and Redis
       become: true
@@ -69,31 +69,31 @@
         redis-server > /dev/null 2>&1 &
         systemctl enable --now redis-server
 
-    # Expertiza clone repo, install gems
-    - name: Clone Expertiza repository
-      ansible.builtin.git:
-        repo: https://github.com/mundra-ankur/expertiza.git
-        dest: "{{ app_root }}"
-        clone: yes
-        update: no
-        version: main
+#     # Expertiza clone repo, install gems
+#     - name: Clone Expertiza repository
+#       ansible.builtin.git:
+#         repo: https://github.com/mundra-ankur/expertiza.git
+#         dest: "{{ app_root }}"
+#         clone: yes
+#         update: no
+#         version: main
 
-    - name: Copy config/database.yml.example to config/database.yml
-      ansible.builtin.copy:
-        src: "{{ app_root }}/config/database.yml.example"
-        dest: "{{ app_root }}/config/database.yml"
-        owner: "{{ user }}"
-        mode: '0644'
-        remote_src: yes
+#     - name: Copy config/database.yml.example to config/database.yml
+#       ansible.builtin.copy:
+#         src: "{{ app_root }}/config/database.yml.example"
+#         dest: "{{ app_root }}/config/database.yml"
+#         owner: "{{ user }}"
+#         mode: '0644'
+#         remote_src: yes
 
-    - name: Copy config/secrets.yml.example to config/secrets.yml
-      ansible.builtin.copy:
-        src: "{{ app_root }}/config/secrets.yml.example"
-        dest: "{{ app_root }}/config/secrets.yml"
-        owner: "{{ user }}"
-        mode: '0644'
-        remote_src: yes
+#     - name: Copy config/secrets.yml.example to config/secrets.yml
+#       ansible.builtin.copy:
+#         src: "{{ app_root }}/config/secrets.yml.example"
+#         dest: "{{ app_root }}/config/secrets.yml"
+#         owner: "{{ user }}"
+#         mode: '0644'
+#         remote_src: yes
 
-    - name: Install packages based on bower.json
-      community.general.bower:
-        path: "{{ app_root }}"
+#     - name: Install packages based on bower.json
+#       community.general.bower:
+#         path: "{{ app_root }}"
