--- a/setup/setup_playbook_ubuntu.yml
+++ b/setup/setup_playbook_ubuntu.yml
@@ -1,9 +1,10 @@
 ---
 - name: Setup Expertiza System
   hosts: node
+  become: true
 
   vars:
-    user: root
+    user: amundra
     user_home: "/root"
     app_root: "{{ user_home }}/expertiza"
     ruby_version: 3.2.1
